# AI-Personal-Assistant

./: .gitignore  README.md
ai_assistant/: README.md  pyproject.toml  requirements.txt
ai_assistant/src/ai_assistant/: crew.py  main.py
ai_assistant/src/ai_assistant/config/: agents.yaml  tasks.yaml
ai_assistant/src/ai_assistant/tools/: custom_tool.py
