[project]
name = "ai_assistant"
version = "0.1.0"
description = "ai_assistant using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.79.4,<1.0.0"
]

[project.scripts]
ai_assistant = "ai_assistant.main:run"
run_crew = "ai_assistant.main:run"
train = "ai_assistant.main:train"
replay = "ai_assistant.main:replay"
test = "ai_assistant.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
